--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
-  <link rel="stylesheet" href="/src/styles/footer.css">
-  <link rel="stylesheet" href="/src/styles/home.css">
-  <link rel="stylesheet" href="/src/styles/header.css">
-  <link rel="icon" href="/public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/footer.css">
+  <link rel="stylesheet" href="src/styles/home.css">
+  <link rel="stylesheet" href="src/styles/header.css">
+  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -21,6 +21,6 @@
   <!-- El footer se insertará dinámicamente aquí -->
 
   <!-- Solo este script importa todo lo necesario -->
-  <script type="module" src="./src/js/main.js"></script>
+  <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
