--- a/testimonies.html
+++ b/testimonies.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/src/styles/footer.css">
-  <link rel="stylesheet" href="/src/styles/testimonials.css">
-  <link rel="stylesheet" href="/src/styles/header.css">
-  <link rel="icon" href="/public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/footer.css">
+  <link rel="stylesheet" href="src/styles/testimonials.css">
+  <link rel="stylesheet" href="src/styles/header.css">
+  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
       <p>“Professional and empathetic. The process was smooth and helpful.” - Luis M.</p>
     </article>
   </section>
-  <script type="module" src="./src/js/main.js"></script>
+  <script type="module" src="src/js/main.js"></script>
 
 </body>
 </html>
