--- a/book.html
+++ b/book.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book</title>
-  <link rel="stylesheet" href="/src/styles/book.css">
-  <link rel="stylesheet" href="/src/styles/footer.css">
-  <link rel="stylesheet" href="/src/styles/header.css">
-  <link rel="icon" href="/public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/book.css">
+  <link rel="stylesheet" href="src/styles/footer.css">
+  <link rel="stylesheet" href="src/styles/header.css">
+  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -32,6 +32,6 @@
     </form>
   </section>
 
-  <script type="module" src="./src/js/main.js"></script>
+  <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
