--- a/services.html
+++ b/services.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/src/styles/footer.css">
-  <link rel="stylesheet" href="/src/styles/services.css">
-  <link rel="stylesheet" href="/src/styles/header.css">
-  <link rel="icon" href="/public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/footer.css">
+  <link rel="stylesheet" href="src/styles/services.css">
+  <link rel="stylesheet" href="src/styles/header.css">
+  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -24,7 +24,7 @@
     <p>Each session lasts 50 minutes. Online and in-person available.</p>
   </section>
 
-  <script type="module" src="./src/js/main.js"></script>
+  <script type="module" src="src/js/main.js"></script>
 
 </body>
 </html>
