Actualización de archivos en main

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
   <link rel="stylesheet" href="src/styles/footer.css">
   <link rel="stylesheet" href="src/styles/home.css">
   <link rel="stylesheet" href="src/styles/header.css">
-  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="public/images/favicon_ikal_light/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/home.css">
 
 </head>
 <body>
   <!-- El header se insertará dinámicamente aquí -->
-  
-  <section class="hero">
-    <h2>Welcome to Your Safe Space</h2>
-    <p>Discover therapy that adapts to your rhythm.</p>
+<section class="hero-container">
+  <div class="hero-text">
+    <h2>Welcome to IKAL your safe space</h2>
+    <p>Discover therapy that adapts to your rhythm</p>
+    <p>We offer personalized therapy sessions that fit your schedule and needs.</p>
+    <img src="public/images/mariana.jpeg" alt="mariana" class="logo" width="200" height="200">
     <a href="book.html" class="btn">Schedule Now</a>
-  </section>
-
+  </div>
+  <div class="hero-image">
+    <img src="public/images/ikal.jpeg" alt="IKAL Therapy">
+  </div>
+</section>
   <!-- El footer se insertará dinámicamente aquí -->
 
   <!-- Solo este script importa todo lo necesario -->
