--- a/services.html
+++ b/services.html
@@ -7,22 +7,46 @@
   <link rel="stylesheet" href="src/styles/footer.css">
   <link rel="stylesheet" href="src/styles/services.css">
   <link rel="stylesheet" href="src/styles/header.css">
-  <link rel="icon" href="public/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="public/images/favicon_ikal_light/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/styles/services.css">
+
 
 </head>
 <body>
 
   <header> <!-- Mismo nav que en index.html --> </header>
 
-  <section class="services">
-    <h2>Therapy Services</h2>
-    <ul>
-      <li><strong>1 Session/Week</strong> - $80</li>
-      <li><strong>2 Sessions/Week</strong> - $150</li>
-      <li><strong>4 Sessions/Week</strong> - $280</li>
-    </ul>
-    <p>Each session lasts 50 minutes. Online and in-person available.</p>
-  </section>
+<section class="services">
+  <h2>Therapy Services</h2>
+  
+  <div class="services-grid">
+    <div class="service-column">
+      <ul class="service-list">
+        <li><strong>Time Life</strong></li>
+        <li><strong>Strong Life</strong></li>
+        <li><strong>IKAL Life</strong></li>
+      </ul>
+    </div>
+    
+    <div class="service-column">
+      <ul class="pricing-list">
+        <li><strong>1 Session/Week</strong> - $40 USD</li>
+        <li><strong>2 Sessions/Week</strong> - $70 USD</li>
+        <li><strong>4 Sessions/Week</strong> - $140 USD</li>
+      </ul>
+    </div>
+    
+    <div class="service-column">
+      <div class="button-group">
+        <a href="book.html" class="btn primary">Book Now</a>
+        <a href="book.html" class="btn primary">Book Now</a>
+        <a href="book.html" class="btn primary">Book Now</a>
+      </div>
+    </div>
+  </div>
+  
+  <p class="disclaimer">Each session lasts 50 minutes. Online and in-person available.</p>
+</section>
 
   <script type="module" src="src/js/main.js"></script>
 
